--- a/BehpouyanApiProject/BehpouyanApiProject.csproj
+++ b/BehpouyanApiProject/BehpouyanApiProject.csproj
@@ -20,7 +20,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="StackExchange.Redis" Version="2.6.122" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
+	
 
 </Project>
